tests/test_files_pa3/errors/MethodsNotReturningValue.ic
class A
{
	int a(int z)
	{
		if (z > 0)
			return z;
	}
	
	int b(int z)
	{
		while (z > 0 || z <= 0)
		{
			return z;
		}
	}
	
	int c(int z)
	{
		if (z > 0)
		{
			return z;
		}
		else if (z <= 0)
		{
			return z;
		}
	}
	
	int d(int z)
	{
		if (z > 0)
		{
		}
		else if (z < 0)
		{
			return z;
		}
		else
		{
			return z;
		}
	}
	
	int e(int z)
	{
		if (z > 0)
			return z;
		else
		{
			{
				z = z + 1;
			}
			
			while (z > 0)
			{
				return z;
			}
			
			if (z > 0)
			{
			}
			else
			{
				return z;
			}
		}
	}
}